--- a/asq_app/package.json
+++ b/asq_app/package.json
@@ -13,8 +13,9 @@
     "express": "^4.12.4",
     "express-session": "^1.11.2",
     "fs": "^0.0.2",
-    "mongoose": "^4.0.3",
+    "mongoose": "^4.2.4",
     "mongoose-paginate": "^4.2.0",
+    "mongoose-encryption": "1.3.0",
     "moment": "^2.10.6",
     "nodemailer": "^0.7.1",
     "passport": "^0.2.2",
